# quadio

./: Cargo.toml  README.md
.github/workflows/: cicd.yml
cli/: Cargo.toml  README.md  changelog.md
cli/src/: main.rs
core/: Cargo.toml  README.md
core/src/: lib.rs  player.rs  project.rs  reader.rs
gui/: Cargo.toml
gui/src/: main.rs  waveform.rs
