[package]
name = "quadio-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
quadio-core = { version= "0.1.0", path = "../core" }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = { version = "^0.2.155" }

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "^0.3.9"
features = ["consoleapi", "processenv", "winbase"]
