[package]
name = "quadio-cli"
version = "0.1.1"
edition = "2021"
description = "QUADIO Project command-line interface"
repository = "https://github.com/4LT/quadio"
license = "CC0-1.0 OR MIT OR Apache-2.0"
categories = ["multimedia::audio", "command-line-utilities"]
keywords = ["wave", "wav", "cue", "quake"]

[[bin]]
name = "quadio-cli"
test = false
bench = false

[dependencies]
quadio-core = { version= "0.1.0", path = "../core" }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = { version = "^0.2.155" }

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "^0.3.9"
features = ["consoleapi", "processenv", "winbase"]
